--- a/package.json
+++ b/package.json
@@ -8,8 +8,7 @@
     "build": "vite build",
     "lint": "eslint .",
     "preview": "vite preview",
-     "predeploy": "npm run build",
-    "deploy": "gh-pages -d dist"
+    "deploy": "npm run build && gh-pages -d dist"
   },
   "dependencies": {
     "i18next": "^23.15.1",
@@ -33,7 +32,5 @@
     "globals": "^15.9.0",
     "tailwindcss": "^3.4.12",
     "vite": "^5.4.1"
-  },
-  "homepage": "https://luiscorrea9.github.io/discount_react/"
-
+  }
 }
